<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background_image"
            android:elevation="0dp"
            app:srcCompat="@drawable/background_image" />

        <FrameLayout
            android:id="@+id/nav_button_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/nav_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/ic_menu_black_24dp"
                android:elevation="0dp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/congress_text_container"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="222dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hv_bold"
                android:text="@string/num_congress"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hv_bold"
                android:text="@string/congress"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <fragment
            android:id="@+id/bill_recycler_fragment"
            android:name="com.sadadib.billtracker.BillsListFragment"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="0dp"
            android:elevation="5dp"
            tools:layout="@layout/fragment_bill_list" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        app:fabCustomSize="70dp"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_search_white_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>