<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:clickable="true"
    android:clipToPadding="false"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground"
    app:cardElevation="8dp"
    app:cardMaxElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bill_row_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bill_item_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bill_item_image"
            android:cropToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars[0]" />


        <TextView
            android:id="@+id/bill_item_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/hv_bold"
            android:text="@string/bill_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/bill_item_title"
            app:layout_constraintStart_toEndOf="@+id/bill_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bill_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/hv_medium"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/bill_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bill_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bill_item_sponsor"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/hv_light"
            android:maxLines="1"
            android:text="@string/bill_sponsor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bill_item_image"
            app:layout_constraintTop_toBottomOf="@+id/bill_item_title" />

        <TextView
            android:id="@+id/bill_introduced_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/hv_bold"
            android:text="@string/bill_introduced"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/bill_item_image"
            app:layout_constraintTop_toBottomOf="@+id/bill_item_sponsor" />

        <TextView
            android:id="@+id/bill_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/hv_bold"
            android:text="@string/bill_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/bill_introduced_text"
            app:layout_constraintTop_toBottomOf="@+id/bill_item_sponsor" />

        <TextView
            android:id="@+id/bill_introduced_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/hv_light"
            android:text="@string/bill_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bill_item_image"
            app:layout_constraintTop_toBottomOf="@+id/bill_introduced_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/bill_status_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/hv_light"
            android:text="@string/bill_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bill_item_image"
            app:layout_constraintTop_toBottomOf="@+id/bill_status_text"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
